--- a/index.html
+++ b/index.html
@@ -3,15 +3,38 @@
 
 <head>
 	<title>carpool.vc</title>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+	<link rel="canonical" href="https://carpool-vc.github.io/"/>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-	<meta name="description" content="Drive with us" />
-	<meta property="og:site_name" content="carpool.vc" />
-	<meta property="og:title" content="carpool.vc" />
-	<meta property="og:type" content="article" />
+	<meta property="og:site_name" content="carpool.vc"/>
+	<meta property="og:title" content="Episodes"/>
+	<meta property="og:url" content="https://carpool-vc.github.io/"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:description" content="Jonathon &amp; Brett work at Ludlow Ventures. They carpool to work every day &amp;
+	started recording their in-car conversations amongst themselves &amp; other
+	entrepreneurs/VC's. Upcoming episodes feature calls with: Eric Ries, Jason
+	Calacanis, &amp; more."/>
+	<meta itemprop="name" content="Episodes"/>
+	<meta itemprop="url" content="https://carpool-vc.github.io/"/>
+	<meta itemprop="description" content="Jonathon &amp; Brett work at Ludlow Ventures. They carpool to work every day &amp;
+	started recording their in-car conversations amongst themselves &amp; other
+	entrepreneurs/VC's. Upcoming episodes feature calls with: Eric Ries, Jason
+	Calacanis, &amp; more."/>
+	<meta name="twitter:title" content="Episodes"/>
+	<meta name="twitter:url" content="https://carpool-vc.github.io/"/>
+	<meta name="twitter:card" content="summary"/>
+	<meta name="twitter:description" content="Jonathon &amp; Brett work at Ludlow Ventures. They carpool to work every day &amp;
+	started recording their in-car conversations amongst themselves &amp; other
+	entrepreneurs/VC's. Upcoming episodes feature calls with: Eric Ries, Jason
+	Calacanis, &amp; more."/>
+	<meta name="description" content="Jonathon &amp; Brett work at Ludlow Ventures. They carpool to work every day &amp;
+	started recording their in-car conversations amongst themselves &amp; other
+	entrepreneurs/VC's. Upcoming episodes feature calls with: Clark Valberg,
+	Eric Ries, Mark Suster, Jason Calacanis, &amp; more." />
 	<meta property="og:image" content="https://carpool-vc.github.io/card.jpg" />
 	<meta property="og:description" content="Drive with us" />
-	<meta property="og:url" content="http:https://www.carpool.vc" />
+	<meta property="og:url" content="http:https://carpool-vc.github.io" />
 	<meta property="twitter:card" content="summary_large_image" />
 	<link href="https://fonts.googleapis.com/css?family=Lato:900,900italic,400,400italic,700,700italic" rel="stylesheet" type="text/css" />
 	<link href="style.css" rel="stylesheet" />
